# WantToDevelopDocumentCLI

./: CLAUDE.md  Cargo.toml  README.md
asset/: template.yaml  want.md
asset/docs/: api-design.md
src/: commands.rs  config.rs  create.rs  main.rs  parser.rs  project.rs  setup.rs  template.rs
