[package]
name = "wtd"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
chrono = "0.4.41"
clap = { version = "4.5.40", features = ["derive"] }
clap_derive = "4.5.40"
dialoguer = "0.11.0"
dirs = "6.0.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_yaml = "0.9.33"
shellexpand = "3.1.1"
slug = "0.1.6"
tera = "1.20.0"
